src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActivitySubtype__c</fullName>
        <label>ActivitySubtype</label>
        <picklist>
            <picklistValues>
                <fullName>Call - exploratory</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Call - follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call - no-show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <formula>IF(
    OR(
        CONTAINS(
            LOWER(Subject),
            &quot;e-mail&quot;
        ),
        CONTAINS(
            LOWER(Subject),
            &quot;email&quot;
        )
    ),

    1, 

    NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Count__c</fullName>
        <formula>IF(
    OR(
        CONTAINS(
            LOWER(Subject),
            &quot;call&quot;
        ),
        CONTAINS(
            LOWER(Subject),
            &quot;meeting&quot;
        )
    ),

    1, 

    NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snooze_Activity__c</fullName>
        <description>Equals today&apos;s date</description>
        <formula>Today()</formula>
        <label>Snooze Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <inlineHelpText>Indicates that this record was created by Cirrus Insight.</inlineHelpText>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Day_Activity_Created__c</fullName>
        <formula>CASE( MOD(  DATEVALUE(CreatedDate)  - DATE(1900, 1, 7), 7), 0, &quot;1 Sunday&quot;, 1, &quot;2 Monday&quot;, 2, &quot;3 Tuesday&quot;, 3,&quot;4 Wednesday&quot;, 4, &quot;5 Thursday&quot;, 5, &quot;6 Friday&quot;, 6, &quot;7 Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Activity Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Email_Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not this email has been opened by a recipient.</inlineHelpText>
        <label>Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Clicked__c</fullName>
        <inlineHelpText>First time a link in this email was opened.</inlineHelpText>
        <label>First Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Opened__c</fullName>
        <inlineHelpText>The date this email was first opened by one of the recipients.</inlineHelpText>
        <label>First Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Reply__c</fullName>
        <inlineHelpText>The date this email was first replied to by one of the recipients.</inlineHelpText>
        <label>First Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Hour_Sent__c</fullName>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The hour of the day that the email was sent. (in UTC)</inlineHelpText>
        <label>Hour Sent (UTC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Hour__c</fullName>
        <formula>FLOOR ( MOD( CreatedDate - ($System.OriginDateTime + 5/24),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Clicked__c</fullName>
        <inlineHelpText>Last time a link in this email was opened.</inlineHelpText>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Opened__c</fullName>
        <inlineHelpText>The date the email was most recently opened.</inlineHelpText>
        <label>Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Reply__c</fullName>
        <inlineHelpText>The date the email was most recently replied to.</inlineHelpText>
        <label>Last Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Links_Clicked__c</fullName>
        <formula>cirrusadv__Num_of_Clicks__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether or not any links in this email were opened by a recipient.</inlineHelpText>
        <label>Links Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Clicks__c</fullName>
        <inlineHelpText>Number of times links in this email were opened.</inlineHelpText>
        <label># of Clicks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Opens__c</fullName>
        <inlineHelpText>Number of times this tracked email has been opened.</inlineHelpText>
        <label># of Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Replies__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times this email has been replied to.</inlineHelpText>
        <label># of Replies</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Reply_Received__c</fullName>
        <formula>cirrusadv__Num_of_Replies__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Template_Name__c</fullName>
        <inlineHelpText>The email template used.</inlineHelpText>
        <label>Template Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Time_to_Open__c</fullName>
        <formula>(cirrusadv__First_Opened__c - CreatedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How long did this email take to open? (in minutes)</inlineHelpText>
        <label>Time to Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__isTracked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that opens of this email will be tracked and reported by Cirrus Insight.</inlineHelpText>
        <label>Tracked</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>